# pointpillars_int8

./: CMakeLists.txt  README.md  test_point_pillars_cuda.cpp  test_point_pillars_cuda_ros.cpp
config/: point_pillars_detection.yaml  pointpillar_ptq.yaml
eval/: kitti_format.py  kitti_util.py  pcdet.pkl
eval/kitti-object-eval-python/: eval.py
eval/kitti/object/: testing  training
include/: common.h  detected_object.h  detected_object_array.h  kernel.h  nms.h  params.h  perception_config.h  perception_config.h.in  point_pillars.h  postprocess_cuda.h  preprocess_points_cuda.h  scatter_cuda.h  timer.h  visualize.h
model/: pp_pfe.onnx
python/: generate_calib_data.py  onnx_to_trt.py  ptq_int8.py  transfer_pfe_onnx.py  transfer_rpn_onnx.py
src/: nms.cpp  point_pillars.cpp  postprocess_cuda.cpp  postprocess_cuda.cu  preprocess_points_cuda.cpp  preprocess_points_cuda.cu  scatter_cuda.cpp  scatter_cuda.cu  visualize.cpp
